Changelog for ghcid

    Add Eq instance for Ghci
    #88, add a --project flag
    Rename --notitle flag to --no-title
0.6.5
    #82, properly deal with warning messages including spans
    #78, support boot files better
    Better support for dealing with GHC 8.0 call stack messages
    #79, support multiple --test flags
    #71, improve multi-project stack support
    #74, make sure Cygwin terminals flush output properly
    If the test exits then exit ghcid
0.6.4
    #69, fix up for stack project with file arguments
0.6.3
    #68, add --no-status to avoid printing the reloading message
0.6.2
    #63, detect test failures and update the titlebar/icon
    #66, add --warnings to run tests even in there are warnings
    #62, find stack.yaml in the parent directory
    Make --verbose echo all things sent to stdin
    #57, support wrappers that access stdin first (e.g. stack)
    #67, make --reload/--restart recurse through directories
    #61, deal with drive letters in files (for stack on Windows)
    #58, improve the --help message
0.6.1
    Add --reload to add files that reload, but do not restart
    #56, allow --restart to take directories
0.6
    #38, implement loading with stack
    Add process, quit and execStream to the API
    #29, add interrupt function
    Add Data instances for the types
    Make stopGhci more effective, now kills the underlying process
    Make startGhci take a function to write the buffer to
0.5.1
    #17, deal with recursive modules errors properly
    #50, use -fno-code when not running tests (about twice as fast)
    #44, abbreviate the redundant module import error
    #45, add an extra space before the ... message
    #42, always show the first error in full
    #43, work even if people use break-on-exception flags
    #42, make the first error a minimum of 5 lines
0.5
    Add an extra boolean argument to startGhci
    Add the number of modules loaded after All good
    Print out messages until the prompt comes up