@@ -1,5 +1,6 @@
 Changelog for ghcid
 
+    #89, exit sooner when the child process exits unexpectedly
     Add Eq instance for Ghci
     #88, add a --project flag
     Rename --notitle flag to --no-title
